_sass/_layout.scss
/********************************************/
/*              MAIN BODY                   */
/********************************************/


@media screen and (min-width: 765px) {
  .main-wrapper {
    display: flex;
    height: 100vh;
  }
  
  .content-wrapper {
    padding: 3rem;
  }
  
  header {
    flex: 1;
    display: flex;
    flex-direction: column; 
  }
  
  .page-content {
    flex: 3;
    overflow-y: scroll;
  }
}

/********************************************/
/*              HEADER                      */
/********************************************/


.cs-info a, 
nav a {
  color: $white;
  &:visited {
    color: $white;
  }
  &:hover {
    color: $orange;
  }
}



/* TOP BLOCK */

.cs-info {
  background: $green;
  color: $off-white;
}

.social-list {
  margin-bottom: 0;
  display: flex;
  justify-content: center;
}

.social-list .username {
  display: none;
}

.social-list li {
  padding: 0 1rem;
}

.icon > svg path {
  fill: $white;
}


/* NAVIGATION */

nav {
  background: $dark-brown;
  color: $white;
  padding: 1rem;
}

.nav-list {
  display: flex;
  justify-content: space-around;
}

@media screen and (min-width: 765px) {
  
  .cs-info {
    flex-grow: 1;
    flex-shrink: 0;
    flex-grow: 30%;
  }
  
  nav {
    flex-grow: 3;
    flex-shrink: 0;
    flex-basis: 70%;
  }
  
  .nav-list {
    flex-direction: column;
    align-items: center;
    li {
      padding: 0.5rem;
    }
  }
}

/********************************************/
/*              HOMEPAGE                    */
/********************************************/

.site-header {
  border-bottom: 1px solid #000;
}

.article-list li {
  border-bottom: 1px solid #000;
  padding: 0.7rem;
}

.rss-subscribe {
  padding: 0.7rem;
}

@media screen and (min-width: 475px) {
  .article-list li {
    padding: 1.5rem;
  }
  
  .rss-subscribe {
    padding: 1.5rem;
  }
}

